correzioni giocatori wqdibniowq

--- a/index.html
+++ b/index.html
@@ -320,12 +320,33 @@
                     <button type="button" class="btn btn-dark set-tag-btn">PENALITY</button>
                 </div>
 
-                <div class="form-group col-6" id="PasquForm">
-                    <label for="Pasqu"><strong>Pasqu:</strong></label>
-                    <input type="text" class="form-control tag-input" id="Pasqu" placeholder="Inserisci i tag separati da virgola">
-                    <button type="button" class="btn btn-danger set-impostore-btn" onclick="setImpostore('PasquForm')">Set IMPOSTORE</button>
-                    <button type="button" class="btn btn-info set-crewmate-btn" onclick="setCrewmate('PasquForm')">Set CREWMATE</button>
-                    <button type="button" class="btn btn-secondary set-crewmate-btn" onclick="setDead('PasquForm')">Set DEAD</button>
+                <div class="form-group col-6" id="VanniForm">
+                    <label for="Vanni"><strong>Vanni:</strong></label>
+                    <input type="text" class="form-control tag-input" id="Vanni" placeholder="Inserisci i tag separati da virgola">
+                    <button type="button" class="btn btn-danger set-impostore-btn" onclick="setImpostore('VanniForm')">Set IMPOSTORE</button>
+                    <button type="button" class="btn btn-info set-crewmate-btn" onclick="setCrewmate('VanniForm')">Set CREWMATE</button>
+                    <button type="button" class="btn btn-secondary set-crewmate-btn" onclick="setDead('VanniForm')">Set DEAD</button>
+                    <br>
+                    <button type="button" class="btn btn-warning set-tag-btn setImpostorsHidden">IA</button>
+                    <button type="button" class="btn btn-warning set-tag-btn setDeadHidden">ID</button>
+                    <button type="button" class="btn btn-warning set-tag-btn setImpostorsHidden">KILL</button>
+                    <br>
+                    <button type="button" class="btn btn-primary set-tag-btn setDeadHidden">CD</button>
+                    <button type="button" class="btn btn-primary set-tag-btn setCrewmateHidden">CA</button>
+                    <button type="button" class="btn btn-primary set-tag-btn setCrewmateHidden">RC</button>
+                    <button type="button" class="btn btn-primary set-tag-btn setCrewmateHidden">RCS</button>
+                    <button type="button" class="btn btn-primary set-tag-btn setDeadHidden">GA</button>
+                    <button type="button" class="btn btn-primary set-tag-btn setCrewmateHidden">RCNT</button>
+                    <button type="button" class="btn btn-dark set-tag-btn setCrewmateHidden">CAMPER</button>
+                    <button type="button" class="btn btn-dark set-tag-btn">PENALITY</button>
+                </div>
+
+                <div class="form-group col-6" id="LiaForm">
+                    <label for="Lia"><strong>Lia:</strong></label>
+                    <input type="text" class="form-control tag-input" id="Lia" placeholder="Inserisci i tag separati da virgola">
+                    <button type="button" class="btn btn-danger set-impostore-btn" onclick="setImpostore('LiaForm')">Set IMPOSTORE</button>
+                    <button type="button" class="btn btn-info set-crewmate-btn" onclick="setCrewmate('LiaForm')">Set CREWMATE</button>
+                    <button type="button" class="btn btn-secondary set-crewmate-btn" onclick="setDead('LiaForm')">Set DEAD</button>
                     <br>
                     <button type="button" class="btn btn-warning set-tag-btn setImpostorsHidden">IA</button>
                     <button type="button" class="btn btn-warning set-tag-btn setDeadHidden">ID</button>
