correzioni giocatori wqdibniowbndhdhq

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                 
                 <!-- Player 5 -->
                 <div class="form-group col-6" id="KendyForm">
-                    <label for="Kendy"><strong>Kendy:</strong></label>
+                    <label for="Kendy"><strong>Charles:</strong></label>
                     <input type="text" class="form-control tag-input" id="Kendy" placeholder="Inserisci i tag separati da virgola">
                     <button type="button" class="btn btn-danger set-impostore-btn" onclick="setImpostore('KendyForm')">Set IMPOSTORE</button>
                     <button type="button" class="btn btn-info set-crewmate-btn" onclick="setCrewmate('KendyForm')">Set CREWMATE</button>
